fix fills table and have tooltips disappear on mobile scroll

--- a/packages/augur-ui/src/modules/market-cards/market-card.styles.less
+++ b/packages/augur-ui/src/modules/market-cards/market-card.styles.less
@@ -158,6 +158,7 @@
     padding-bottom: @size-8;
     border-right: 1px solid @color-dark-grey;
     margin-right: -1px;
+    align-items: flex-end;
 
     > div:not(:first-of-type) {
       margin-left: @size-4;
